2008-11-10  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: add support for @ogonek.
	* texi2html.init, texi2html.pl: encode correctly texi dumped.

2008-11-08  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init, texi2html.pl: move index splitting code back to
	texi2html.pl, but still in the Config namespace, to mark clearly
	that this code is GPL. summary_letter is also put in texi2html.pl
	since it share a variable at file scope.
	* examples/*: add copyright notices to most init files, except 
	xml.init and book.init that should remain as an example users can 
	copy from.

2008-11-03  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: remove leading spaces and trailing spaces in 
	multitable cells.
	* texi2html.pl: do human-readable id for toc, and different id
	for stoc.
	* texi2html.pl, texi2html.init, examples/makeinfo.init: with 
	OVERVIEW_LINK_TO_TOC set, overview links to toc as in makeinfo.

2008-11-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: don't do paragraphs in multitables.
	* texi2html.pl, texi2html.init: handle @smallquotation, change 
	quotation_prepend_text and quotation function reference APIs.
	* texi2html.init: put a table line in <tt> if and only if there is
	a code-like environment enclosing the construct.
	* texi2html.pl: warn if the menu order doesn't follow the sectionning
	order.

2008-11-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: associate node with the right file,
	even if after section and split index. 
	Handle better empty @elements_list.

2008-09-25  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: associate nodes that are not already associated 
	with the top node in case only sections are used.
	* texi2html.init: associate elements in split indices to the 
	split indice added element.

2008-09-24  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl, texi2html.init: remove THIS_HEADER. Instead 