@@ -48,8 +48,7 @@ kbd: ``simple-double-three-four-''
 @ followed by a tab
  
 @ followed by a new line
-
-@- 
+ @- 
 @| 
 @: 
 @! !
